--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     height: 400px;
     border: 10px;
     border-style: solid;
+    border-color: gray;
     display: flex;
     flex-wrap: wrap;
     gap: 0px;
@@ -17,5 +18,10 @@
     border: 0.5px;
     border-style: solid;
     box-sizing: border-box;
+    border-color: gray;
     margin: 0;
+}
+
+.marked {
+    background-color: black;
 }
