--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Cursive, sans-serif;
+    gap: 24px;
+}
+
+.title {
+    margin: 24px;
+    font-size: 48px;
+}
+
 .grid-container {
     width: 400px;
     height: 400px;
