Implement clear button with transition

--- a/style.css
+++ b/style.css
@@ -33,8 +33,10 @@ body {
     box-sizing: border-box;
     border-color: gray;
     margin: 0;
+    transition: 1s;
 }
 
 .marked {
     background-color: black;
+    transition: none;
 }
