--- a/style.css
+++ b/style.css
@@ -1,21 +1,52 @@
+@font-face {
+	font-family: 'proxima_nova_rgregular';
+	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
+	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
+		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
+		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'proxima_nova_rgbold';
+	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot');
+	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff') format('woff'),
+		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf') format('truetype'),
+		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'adelle_rgregular';
+	src: url('https://litmus.com/fonts/Emails/adelle_reg-webfont.eot');
+	src: url('https://litmus.com/fonts/Emails/adelle_reg-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('https://litmus.com/fonts/Emails/adelle_reg-webfont.woff') format('woff'),
+		 url('https://litmus.com/fonts/Emails/adelle_reg-webfont.ttf') format('truetype'),
+		 url('https://litmus.com/fonts/Emails/adelle_reg-webfont.svg#adelle_rgregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: Cursive, sans-serif;
+    font-family: 'proxima_nova_rgbold', sans-serif;
     gap: 24px;
     background-color: #E1D9D1;
 }
 
 .title {
-    margin: 24px;
     font-size: 48px;
 }
 
 .grid-container {
     width: 500px;
     height: 500px;
-    border: 10px;
+    border: 5px;
     border-style: solid;
     border-color: gray;
     display: flex;
@@ -46,7 +77,8 @@ body {
 .button-container {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 40px;
+    justify-content: center;
 }
 
 .container {
@@ -57,4 +89,19 @@ body {
 
 button {
     padding: 10px;
+    background-color: white;
+    border-radius: 4px;
+    border-style: solid;
+    font-family: 'proxima_nova_rgregular', sans-serif;
+    font-size: 16px;
+    border-color: black;
+}
+
+button.toggled {
+    background-color: black;
+    color: white;
+}
+
+button:hover {
+    transform: scale(1.05) perspective(1px);
 }
