--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ body {
     background-color: white;
 }
 
+.grid.nontransition {
+    transition: none;
+}
+
 .marked {
     background-color: black;
     transition: none;
