--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ body {
     display: flex;
     flex-direction: column;
     gap: 48px;
-    justify-content: center;
+    justify-content: flex-start;
+    margin: 10px;
 }
 
 .container {
@@ -108,4 +109,46 @@ button.toggled {
 
 button:hover {
     transform: scale(1.05) perspective(1px);
+}
+
+#myRange {
+    width: 100%;
+    height: 2px;
+    appearance: none;
+}
+
+#grid-size {
+    display: flex;
+    box-sizing: border-box;
+    margin-top: -36px;
+    justify-content: center;
+    gap: 16px;
+}
+
+
+#grid-size {
+    display: flex;
+    box-sizing: border-box;
+    margin-top: -36px;
+    justify-content: center;
+    gap: 16px;
+}
+
+/* Updated styles */
+
+
+.grid-size {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 200px; /* Adjust the width as needed */
+}
+
+.grid-size span {
+    position: absolute;
+}
+
+.slider::-webkit-slider-thumb {
+    color: black; /* Green background */
 }
